site infor and total course counter added

--- a/templates/courses.html
+++ b/templates/courses.html
@@ -17,7 +17,7 @@
     <div class="row" style="padding-top: 60px;">
       <div class="col-md-6">
         <div class="section-sub-head">    
-          <h2>Featured Courses</h2>
+          <h2>Featured Courses ({{total_course}})</h2>
         </div>
       </div>
       <div class="col-md-6 ">
