--- a/templates/header.html
+++ b/templates/header.html
@@ -12,19 +12,24 @@
                 <span></span>
               </span>
             </a>
+            
+            {% for site in siteinfo %}
             <a href="{% url 'home' %}" class="navbar-brand logo ">
-              <img  src="{% static 'assets/img/myimg/ugvlogo.png' %}" class="myimg" alt="Logo" />
+              <img  src="{{site.site_logo.url}}" class="myimg" alt="Logo" />
             </a>
+            {% endfor %}
           </div>
           <div class="main-menu-wrapper">
             <div class="menu-header">
+              {% for site in siteinfo %}
               <a href="{% url 'home' %}" class="menu-logo">
                 <img style="width: 190px;"
-                  src="{% static 'assets/img/myimg/ugvlogo.png' %}"
+                  src="{{site.site_logo.url}}"
                   class="myimg"
                   alt="Logo"
                 />
               </a>
+              {% endfor %}
               <a
                 id="menu_close"
                 class="menu-close"
@@ -38,7 +43,7 @@
                 <a href="{% url 'home' %}">Home <i class="fa-solid fa-house" style="font-size: 16px;"></i></a>
 
               </li>
-              <li><a href="{% url 'author_list' %}">Blog's <i class="fa-solid fa-blog" style="font-size: 16px;"></i></a></li>
+              <li><a href="http://192.168.225.31:8000/">Blog's <i class="fa-solid fa-blog" style="font-size: 16px;"></i></a></li>
               <li>
                 <a href="{% url 'author_list' %}">Teacher's <i class="fas fa-chalkboard-teacher" style="font-size: 16px;"></i></a>
 
