--- a/templates/about.html
+++ b/templates/about.html
@@ -6,6 +6,9 @@
 {% block content %}
 
 <div class="container" style="margin-top: 150px;">
+  <h3>About of E-Course UGV</h3>
+  <p>
+    Welcome to E-Course UGV, your gateway to academic excellence and professional growth. At E-Course UGV, we believe in empowering individuals to pursue their educational aspirations with ease and convenience. Our platform offers a seamless enrollment experience, connecting students with a diverse range of courses offered by our esteemed university partners. Whether you're a lifelong learner looking to expand your horizons or a professional seeking to enhance your skill set, E-Course UGV provides the tools and resources you need to succeed. Join us on this journey towards knowledge and opportunity.</p>
   <h3>Details Our Dedicated Team of Developers</h3>
   <p>
     At UGV Courses, our success is fueled by the passion and expertise of our
