--- a/templates/header.html
+++ b/templates/header.html
@@ -43,7 +43,7 @@
                 <a href="{% url 'home' %}">Home <i class="fa-solid fa-house" style="font-size: 16px;"></i></a>
 
               </li>
-              <li><a href="http://192.168.225.31:8000/">Blog's <i class="fa-solid fa-blog" style="font-size: 16px;"></i></a></li>
+              <li><a href="http://192.168.157.31:8000/">Blog's <i class="fa-solid fa-blog" style="font-size: 16px;"></i></a></li>
               <li>
                 <a href="{% url 'author_list' %}">Teacher's <i class="fas fa-chalkboard-teacher" style="font-size: 16px;"></i></a>
 
@@ -57,7 +57,7 @@
                 <a href="{% url 'courses' %}">Courses <i class="fa-solid fa-book-open-reader" style="font-size: 16px;"></i></a>
               </li>
               <li class="has-submenu menu-effect" >
-                <a href="javascript:void(0)">Category <i class="fa-solid fa-list" style="font-size: 16px;"></i></a>
+                <a href="javascript:void(0)">Semester <i class="fa-solid fa-list" style="font-size: 16px;"></i></a>
                 <ul class="submenu">
                     <!-- {% for category in categories %}
                         <li><a href="{% url 'category_courses' category.slug %}">{{ category.title }}  ({{ category_count.course_count }} courses)</a></li>
