--- a/templates/404.html
+++ b/templates/404.html
@@ -9,6 +9,7 @@
 {% block content %}
 <div class="container" style="text-align: center; margin-top: 100px;" >
     <h1>Requested Page Not Found</h1>
+    <a href="{% url 'home' %}">Back to Home </a>
 </div>
 {% endblock content %}
     
